# alliulingo

./: .gitignore  CMakeLists.txt  README.md  _build.bat
src/: main.cpp
src/core/: config_manager.cpp  config_manager.h  hotkey_filter.cpp  hotkey_filter.h  localization_manager.cpp  localization_manager.h  prompt_manager.cpp  prompt_manager.h
src/network/: fallback_translator.cpp  fallback_translator.h  llm_client.cpp  llm_client.h
src/ocr/: ocr_engine.cpp  ocr_engine.h
src/res/: README.txt  resources.qrc
src/res/locales/: strings-ces.json  strings-deu.json  strings-eng.json  strings-fra.json  strings-ita.json  strings-pol.json  strings-por.json  strings-rus.json  strings-spa.json  strings-ukr.json
src/ui/: help_window.cpp  help_window.h  manual_translate_window.cpp  manual_translate_window.h  prompt_info_window.cpp  prompt_info_window.h  result_popup.cpp  result_popup.h  selection_overlay.cpp  selection_overlay.h
